--- a/frontend/src/components/Help.css
+++ b/frontend/src/components/Help.css
@@ -10,12 +10,14 @@
     border-radius: 10px;
 }
 
-/* Header Styles */
 h1, h2 {
-    background-image: linear-gradient(90deg, hsl(193, 100%, 50%), hsl(283, 39%, 46%)); /* Gradient for headers */
-    -webkit-background-clip: text;
-    color: transparent; /* Makes the text use the gradient color */
+    background-image: linear-gradient(90deg, hsl(193, 100%, 50%), hsl(283, 39%, 46%));
+    background-clip: text;               /* Standard property */
+    -webkit-background-clip: text;       /* For older WebKit browsers */
+    -webkit-text-fill-color: transparent;/* For Safari */
+    color: transparent;                  /* Fallback */
 }
+
 
 /* Video Container */
 .video-container {
